<resources>
    <string name="app_name">Replikapp</string>

    <!-- Global-->
    <string name="error">Error !</string>
    <string name="success">Success !</string>
    <!-- Splash Screen-->
    <string name="Replikapp">ReplikApp</string>


    <!-- Login Screen-->
    <string name="textLogin">LOGIN</string>
    <string name="addressMail">Mail Address</string>
    <string name="password">Password</string>
    <string name="logToReg">Doesn\'t have an account?</string>
    <string name="logBtn">LOGIN</string>
    <string name="resetPass">Forgot your Password ?</string>
    <string name="mail_empty">Please enter your E-Mail Address !</string>
    <string name="pw_empty">Please enter your Password !</string>
    <string name="login_fail">Can\'t find user !</string>
    <string name="signInG">Sign-In with Google</string>
    <string name="googleErr">An Error with Google Sign-In has Occured</string>

    <!-- Register Screen-->
    <string name="textRegister">REGISTER</string>
    <string name="textRErr"></string>
    <string name="regToLog">Do you already have an account?</string>
    <string name="regBtn">REGISTER</string>
    <string name="passwordConf">SIGNUP</string>
    <string name="short_pw">Please enter a Password with at least 8 characters!</string>
    <string name="reg_fail">Error ! Please retry in a moment !</string>

    <!-- Reset Password Sreen -->
    <string name="textRPassword">RESET PASSWORD</string>
    <string name="resetBtn">RESET</string>
    <string name="cancelRPBtn">CANCEL</string>
    <string name="email_sent">E-mail sent !</string>

    <!-- Main informations -->
    <string name="coin_amount_indicator">0x</string>



    <!-- fragment Bibli -->
    <string name="bibli">Replicas</string>
    <string name="textJeux">Jeux</string>
    <string name="textTetris">Tetris</string>
    <string name="textSpaceI">Space Invaders</string>
    <string name="textPacMan">Pac Man</string>

    <!-- fragment Profil -->
    <string name="profil">Profile</string>
    <string name="mailInfo">Email :</string>
    <string name="phoneInfo">Phone :</string>
    <string name="editProfilBtn"> Edit Profile</string>
    <string name="logoutBtn">Sign Out</string>

    <string name="dialogTitle"> Choose Action</string>
    <string name="editProfilPic"> Edit Profil Picture</string>
    <string name="editCoverPic"> Edit Cover Picture</string>
    <string name="editProfileName"> Edit Name</string>
    <string name="editProfilePhone"> Edit Phone Number</string>

    <string name="messUpdatePic">Updating Profile Picture</string>
    <string name="messUpdateCover">Updating Cover Picture</string>
    <string name="messUpdateName">Updating Name</string>
    <string name="messUpdatePhone">Updating Phone Number</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pickImg">Pick from</string>

    <string name="toastRequestCDenied">Please enable camera and storage permission</string>
    <string name="toastRequestGDenied">Please enable storage permission</string>

    <string name="updateName">Update Name</string>
    <string name="updatePhone">Update Phone Number</string>

    <string name="nameUpdateET">Update Name</string>
    <string name="phoneUpdateET">Update Phone Number</string>

    <string name="updateText">Update</string>
    <string name="cancelUpdateBtn">Cancel</string>

    <string name="errorETName">Please enable valid name</string>
    <string name="errorETPhone">Please enable valid phone number</string>

    <!-- fragment Shop -->
    <string name="store">Market</string>
    <string name="textBuyCoins">GET COINS</string>
    <string name="buy_coin_amount">150 coins</string>
    <string name="textBuy">BUY VIP</string>
    <string name="textGame">GAME</string>
    <string name="testHaveVIP">You already have it</string>
    <string name="titleDialogvip"> BUY VIP ?</string>
    <string name="messageDialogvip"> Do you want to buy it ?</string>

    <!-- Edit Profil Screen -->
    <string name="username"> Username </string>
    <string name="phoneNum"> Phone Number </string>

    <!-- ToolBar Menu -->
    <string name="textNightMode">Night mode</string>

    <!-- Alert Dialog-->
    <string name="logOutADTitle"> WARNING</string>
    <string name="logOutADMessage"> Are you sure you want to disconnect ?</string>
    <string name="logOutADYes"> YES</string>
    <string name="logOutADNo"> NO</string>

    <!-- Infinity Invaders Game -->
    <string name="scoreII">Score : </string>
    <string name="pause">Pause</string>
    <string name="background">background</string>
    <string name="title">title</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="score">score</string>
    <string name="home">home</string>
    <string name="play">play</string>
    <string name="highScore">High score : </string>
    <string name="mode">mode</string>
    <string name="mode2">"Mode : "</string>
    <string name="nothing">- - -</string>
    <string name="trophy">trophy</string>
    <string name="song">song</string>
    <string name="toastInvaders1">Achieve a score of 10 in Easy Mode</string>
    <string name="toastInvaders2">Achieve a score of 20 in Normal Mode</string>
    <string name="newhs">New high score : </string>

    <!-- Super Boule Game -->
    <string name="quitSuperBoule">Quit SuperBoule</string>
    <string name="quitSuperBouleConf">Are you sure ?</string>
    <string name="positiveAnswer">Yes !</string>
    <string name="negativeAnswer">No !</string>
    <string name="terminatedGameText">Game finished !</string>
    <string name="touchScreen">Touch screen to start !</string>
    <string name="lvl1">Level 1</string>
    <string name="lvl2">Level 2</string>
    <string name="lvl3">Level 3</string>
    <string name="lvl4">Level 4</string>
    <string name="unlockLvl">You must unlock previous level !</string>
    <string name="inProgress">In Progress : </string>
    <string name="finished">Finished : </string>
    <string name="quest1">Unlock 4 levels</string>
    <string name="quest2">Destroy 50 blocks</string>
    <string name="quest3">Destroy 100 blocks</string>
    <string name="quest4">Destroy 150 blocks</string>
    <string name="quest5">Destroy 1000 blocks</string>




</resources>
